--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,6 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.6.347/build/pdf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
 </html>
